fix image stretching on mobile for hack page

--- a/components/hackmit.module.css
+++ b/components/hackmit.module.css
@@ -73,6 +73,7 @@
   margin-right: auto;
   justify-content: space-around;
   max-width: 80%;
+  height: 100%;
   margin-bottom: 20px;
 }
 
@@ -83,6 +84,7 @@
   margin-right: auto;
   justify-content: space-around;
   max-width: 80%;
+  height: 100%;
   margin-bottom: 50px;
 }
 
